Resolve the alignment issue with search input and button.

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body{
 #search-bar-form{
     width: 60%;
     align-items: center;
+    display: flex;
     
 }
 
@@ -61,7 +62,7 @@ body{
     height: 32px;
     width: 7%;
     margin-left:-7px;
-    border:none;
+    border:1px solid gray;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     
@@ -70,8 +71,11 @@ body{
 #search-bar-form input{
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+
     border:1px solid gray;
     width:70%;
+    padding-top: 0px;
+    padding-bottom: 0px;
     height:30px;
     padding-left: 5px;
 }
